<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/viewLinearMain"
    android:orientation="vertical"
    android:layout_gravity="fill"
    tools:context="com.rapariscode.simplecontacto.MainActivity">

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/scroll_height"
        android:scrollbars="vertical"
        android:scrollbarSize="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_nombre"
                    android:textColorHint="@color/colorPrimary"/>

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_telefono"
                    android:textColorHint="@color/colorPrimary"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_email"
                    android:textColorHint="@color/colorPrimary"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/form_descripcion"
                    android:maxLength="150"
                    android:textColorHint="@color/colorPrimary"/>
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/tvFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_fecha_nac"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                />
            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="@dimen/datePicker_height"
                android:id="@+id/datePicker"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"

                android:layout_gravity="center_horizontal" />

        </LinearLayout>


    </ScrollView>


    <LinearLayout
        android:id="@+id/lviewBoton"
        android:layout_below="@id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_boton_height"
        android:gravity="bottom">
        <Button
            android:theme="@style/miRaisedButton"
            android:layout_gravity="bottom"
            android:id="@+id/btSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_texto"
            android:onClick="getFecha" />

    </LinearLayout>


</LinearLayout>
